--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,23 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
+@import "./utils";
+@import "./fonts";
+@import "./typography";
+@import './blocks/header';
+@import './blocks/slider';
+@import './blocks/who-we-are';
+@import './blocks/expertise';
+@import './blocks/services';
+@import './blocks/testimonials';
+@import './blocks/result';
+@import './blocks/footer';
 
 body {
-  background: $c-gray;
+margin: 0;
+padding: 0;
+font-family: "Poppins";
+font-weight: 600;
+color: $color-text;
+position: relative;
+}
+h1, h2,h3 {
+margin: 0;
 }
