--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$color-main: #fff;
+$color-title: #253757;
+$color-text: #6c788b;;
+$bg-main: #2c2c2c;
+$bg-services: #f2f6fa;
+$underLine: #2060f6;
+$transitionDuration: 0.5s;
+$color-part: #c0cdd7;
+$tablet-min-width: 576px;
+$desktop-min-width: 1020px;
