--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,10 @@
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+  font-family: "Open Sans", sans-serif;
+  src: url();
 }
+
+@font-face {
+  font-family: "Poppins", sans-serif;
+  src: url();
+}
+
